teacher cards fixed + navbar z-index

--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -9,7 +9,7 @@ align-items: baseline;
    position: fixed; /* Set the navbar to fixed position */
    top: 0; /* Position the navbar at the top of the page */
    width: 100vw; /* Full width */
-   z-index:1;
+   z-index:2;
    box-shadow: none;
    padding-left: 0;
    padding-bottom: 20px;
