--- a/source/stylesheets/components/_t-card.scss
+++ b/source/stylesheets/components/_t-card.scss
@@ -4,6 +4,7 @@ width: 180px;
     border-radius: 100px;
     overflow: hidden;
     border: 0.5px dotted black;
+    margin: 0 auto;
 }
 
 .teacher{
